<resources>
    <string name="app_name">ORG</string>
    <string name="price_forms_hint">Informe o valor</string>
    <string name="description_forms_hint">Descreva os produtos desejados</string>
    <string name="title_forms_hint">Titulo do produto</string>
    <string name="button_forms_add">Incluir</string>
    <string name="forms_instruction">Inclua os produtos a serem vistos pelos seus clientes</string>
    <string name="fba">floating action button</string>
    <string name="extended_button">Adicionar</string>
    <string name="extended_button_text">inclua novos produtos</string>
    <string name="hint_title_product">Nome do produto</string>
    <string name="adiction_import_image">Adicionar</string>
    <string name="import_image_hint">coloque o link da imagem</string>
    <string name="edict_item_menutext">Alterar</string>
    <string name="kill_item_menutext">Excluir</string>
    <string name="add_item_menutext">Adicionar</string>

</resources>